...

        <TextView
            android:id="@+id/arrow_back"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
...

        <TextView
            android:id="@+id/textViewNumberOne"
            style="@style/textView_keyboard_time"
            android:layout_marginStart="20dp"
...
            android:text="@{keyboardViewModel.s1}"
            app:layout_constraintBottom_toTopOf="@id/barrier2"
            app:layout_constraintEnd_toStartOf="@+id/textViewNumberTwo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
...
            android:text="@string/time_separator"
            app:layout_constraintBottom_toTopOf="@id/barrier2"
            app:layout_constraintEnd_toStartOf="@+id/textViewNumberThree"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.5"
...
            android:text="@{keyboardViewModel.s3}"
            app:layout_constraintBottom_toTopOf="@id/barrier2"
            app:layout_constraintEnd_toStartOf="@+id/textViewNumberFour"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
...

        <TextView
            android:id="@+id/calendarMonth"
            android:background="@drawable/ic_baseline_calendar_month_24"
            android:gravity="end"
...

        <TextView
            android:id="@+id/textViewMonday"
            style="@style/textView_keyboard_days"
            android:onClick="@{() -> keyboardViewModel.selectDayOfWeek(1)}"
...
            android:contentDescription="@string/mondayCD"
            app:layout_constraintBottom_toTopOf="@id/barrier3"
            app:layout_constraintEnd_toStartOf="@+id/textViewTuesday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
...
            android:contentDescription="@string/TuesdayCD"
            app:layout_constraintBottom_toTopOf="@id/barrier3"
            app:layout_constraintEnd_toStartOf="@+id/textViewWednesday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
...
            android:contentDescription="@string/WednesdayCD"
            app:layout_constraintBottom_toTopOf="@id/barrier3"
            app:layout_constraintEnd_toStartOf="@+id/textViewThursday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
...
            android:contentDescription="@string/ThursdayCD"
            app:layout_constraintBottom_toTopOf="@id/barrier3"
            app:layout_constraintEnd_toStartOf="@+id/textViewFriday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
...
            android:contentDescription="@string/FridayCD"
            app:layout_constraintBottom_toTopOf="@id/barrier3"
            app:layout_constraintEnd_toStartOf="@+id/textViewSaturday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
...
            android:contentDescription="@string/SaturdayCD"
            app:layout_constraintBottom_toTopOf="@id/barrier3"
            app:layout_constraintEnd_toStartOf="@+id/textViewSunday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
...

        <TextView
            android:id="@+id/textViewSelectTrack"
            android:contentDescription="@string/choose_ringtone"
            app:layout_constraintBottom_toTopOf="@id/barrier4"
...

            <TextView
                android:id="@+id/textViewKeyOne"
                style="@style/textView_keyboard_numbers"
                android:contentDescription="@string/key_one"
...

            <TextView
                android:id="@+id/textViewKeyTwo"
                style="@style/textView_keyboard_numbers"
                android:text="@string/key_two"
...

            <TextView
                android:id="@+id/textViewKeyThree"
                style="@style/textView_keyboard_numbers"
                android:text="@string/key_three"
...

            <TextView
                android:id="@+id/textViewKeyFour"
                style="@style/textView_keyboard_numbers"
                android:text="@string/key_four"
...

            <TextView
                android:id="@+id/textViewKeyFive"
                style="@style/textView_keyboard_numbers"
                android:text="@string/key_five"
...

            <TextView
                android:id="@+id/textViewKeySix"
                style="@style/textView_keyboard_numbers"
                android:text="@string/key_six"
...

            <TextView
                android:id="@+id/textViewKeySeven"
                style="@style/textView_keyboard_numbers"
                android:text="@string/key_seven"
...

            <TextView
                android:id="@+id/textViewKeyEight"
                style="@style/textView_keyboard_numbers"
                android:text="@string/key_eight"
...

            <TextView
                android:id="@+id/textViewKeyNine"
                style="@style/textView_keyboard_numbers"
                android:text="@string/key_nine"
...

            <TextView
                android:id="@+id/textViewKeyZero"
                style="@style/textView_keyboard_numbers"
                android:text="@string/key_zero"
...

        <TextView
            android:id="@+id/textViewKeyCancel"
            style="@style/textView_keyboard_numbers_cancel"
            android:clickable="true"
...
            android:text="@string/back"
            app:layout_constraintBottom_toTopOf="@id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/textViewKeySave"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/guideline12" />
...
