...
    <string name="vibration_signal">vibration signal</string>
    <string name="back_button">back button</string>
    <!-- detail fragment -->
    <string name="ok_signalOff">OFF</string>
    <string name="delay_signal">delay for</string>
    <string name="delay">delay signal</string>
    <string name="min">min.</string>
    <!-- front_list fragment -->
    <string name="done_delete_mode_off">DONE</string>
    <string name="signal_is_delayed">signal is delayed</string>
    <string name="the_nearest_signal">the nearest signal</string>
    <!-- keyboard fragment -->
    <string name="alarm">alarm clock from the list</string>
...
    <string name="open_calendar">open the calendar to select a date</string>
    <string name="choose_ringtone">choose a ringtone</string>
    <string name="first_hour">the first digit denoting the number of hours</string>
    <string name="second_hour">the second digit denoting the number of hours</string>
    <string name="first_minute">the first digit denoting the number of hours</string>
    <string name="second_minute">the second digit denoting the number of minutes</string>
    <string name="hours_keyboard">hours</string>
    <string name="minutes">minutes</string>
    <string name="time_displayed">time displayed</string>
    <string name="activated">will be activated</string>
    <string name="reset_character">reset the typed character</string>
    <string name="incorrect_special_date">the time of the selected calendar date has expired</string>
    <!-- ringtone_picker fragment -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_ringtone">add a new ringtone to the list</string>
    <string name="delete_melody">delete the selected melody from the list</string>
    <string name="choose_a_ringtone">choose a melody</string>
    <string name="cannot_deleted">cannot be deleted default ringtone</string>
    <!-- app menu -->
    <string name="delete_all">delete all</string>
    <string name="settings">settings</string>
    <string name="about_app">about app</string>
    <!-- toast, dialog -->
    <string name="time_is_over">the set time has expired</string>
    <string name="alarm_is_on">alarm is on</string>
    <string name="alarm_is_off">alarm is off</string>
    <string name="delete_all_items">delete all alarms?</string>
    <string name="delete_ok">OK</string>
    <string name="delete_cancel">Cancel</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="restart_activity">the style will be changed after the restart</string>
    <string name="restart_app">restart the app?</string>
    <string name="am_pm">AM/PM</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
...
